fixes, exception handlers added, cart logic modified, security block modified